--- a/dbz/goku.css
+++ b/dbz/goku.css
@@ -3,7 +3,7 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  background-image: url("https://i.stack.imgur.com/kx8MT.gif");
+  background-image: url("https://media1.tenor.com/m/55XyDb06HO8AAAAC/ultra-instinct-ultra-instinct-goku.gif");
   background-size: cover;
 
   height: 100vh;
