--- a/dbz/vegteta.css
+++ b/dbz/vegteta.css
@@ -3,7 +3,7 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  background-image: url("https://i.stack.imgur.com/kx8MT.gif");
+  background-image: url("https://media1.tenor.com/m/meOEmOvvln8AAAAC/vegeta-ultra-ego-vegeta.gif");
   background-size: cover;
 
   height: 100vh;
